@@ -3,6 +3,9 @@ package org.osm2world.console;
 import static org.osm2world.core.GlobalValues.VERSION_STRING;
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 import javax.swing.UIManager;
 
@@ -27,55 +30,141 @@ public class OSM2World {
 
 	public static void main(String[] unparsedArgs) {
 		
-		ProgramMode programMode;
-		CLIArguments args = null;
+		/* assume --gui if no parameters are given */
 		
-		/* parse command line arguments */
-		
-		if (unparsedArgs.length > 0) {
-			
-			try {
-				args = CliFactory.parseArguments(CLIArguments.class, unparsedArgs);
-			} catch (ArgumentValidationException e) {
-				System.err.println(e.getMessage());
-				System.exit(1);
-			}
-			
-			if (!CLIArgumentsUtil.isValid(args)) {
-				System.err.println(CLIArgumentsUtil.getErrorString(args));
-				System.exit(1);
-			}
-			
-			programMode = CLIArgumentsUtil.getProgramMode(args);
-			
-		} else {
+		if (unparsedArgs.length == 0) {
 		 
 			System.out.println("No parameters, running graphical interface.\n"
 					+ "If you want to use the command line, use the --help"
 					+ " parameter for a list of available parameters.");
-			programMode = ProgramMode.GUI;
+			
+			unparsedArgs = new String[]{"--gui"};
 			
 		}
 		
-		/* load configuration file */
+		/* parse command line arguments */
+		
+		CLIArguments args = null;
+		
+		try {
+			args = parseArguments(unparsedArgs);
+		} catch (Exception e) {
+			System.err.println(e.getMessage());
+			System.exit(1);
+		}
+		
+		/* parse lines from parameter file (if one exists) */
+		
+		List<CLIArguments> argumentsList = Collections.singletonList(args);
+		
+		if (args.isParameterFile()) {
+			
+			argumentsList = new ArrayList<CLIArguments>();
+			
+			try {
+				
+				List<String[]> unparsedArgsLines = CLIArgumentsUtil
+					.getUnparsedParameterGroups(args.getParameterFile());
+				
+				for (String[] unparsedArgsLine : unparsedArgsLines) {
+					
+					try {
+						argumentsList.add(parseArguments(unparsedArgsLine));
+					} catch (Exception e) {
+						System.err.println("Could not parse parameters from file:");
+						System.err.println(unparsedArgsLine);
+						System.err.println("Ignoring it. Reason:");
+						System.err.println(e.getMessage());
+					}
+					
+				}
+				
+			} catch (IOException e) {
+				System.err.println(e.getMessage());
+				System.exit(1);
+			}
+			
+		}
+		
+		/* collect parameter groups into compatible groups
+		 * (groups of parameter groups that use the same input and config files) */
+		
+		List<CLIArgumentsGroup> argumentsGroups = new ArrayList<CLIArgumentsGroup>();
+		
+		for (CLIArguments arguments : argumentsList) {
+			
+			boolean added = false;
+			
+			for (CLIArgumentsGroup compatibleGroup : argumentsGroups) {
+				if (compatibleGroup.isCompatible(arguments)) {
+					// add to existing compatible group
+					compatibleGroup.addCLIArguments(arguments);
+					added = true;
+					break;
+				}
+			}
+			
+			if (!added) {
+				// start a new compatible group
+				argumentsGroups.add(new CLIArgumentsGroup(arguments));
+			}
+			
+		}
+		
+		/* execute conversions */
+		
+		for (CLIArgumentsGroup argumentsGroup : argumentsGroups) {
+						
+			if (argumentsList.size() > 1) {
+				System.out.print("executing conversion for these parameter lines: ");
+				for (CLIArguments p : argumentsGroup.getCLIArgumentsList()) {
+					System.out.print(argumentsList.indexOf(p) + " ");
+				}
+				System.out.print("\n");
+			}
+			
+			executeArgumentsGroup(argumentsGroup);
+			
+		}
+		
+	}
 
+	private static CLIArguments parseArguments(String[] unparsedArgs)
+		throws ArgumentValidationException, Exception {
+		
+		CLIArguments args = CliFactory.parseArguments(CLIArguments.class, unparsedArgs);
+		
+		if (!CLIArgumentsUtil.isValid(args)) {
+			throw new Exception(CLIArgumentsUtil.getErrorString(args));
+		}
+		return args;
+		
+	}
+
+	private static void executeArgumentsGroup(CLIArgumentsGroup argumentsGroup) {
+		
+		/* load configuration file */
+		
 		Configuration config = new BaseConfiguration();
 		
-		if (args != null && args.isConfig()) {
+		if (argumentsGroup.getRepresentative().isConfig()) {
 			try {
-				config = new PropertiesConfiguration(args.getConfig());
+				config = new PropertiesConfiguration(
+						argumentsGroup.getRepresentative().getConfig());
 			} catch (ConfigurationException e) {
 				System.err.println("could not read config, ignoring it: ");
 				System.err.println(e);
 			}
 		}
-		
+				
 		/* run selected mode */
+		
+		ProgramMode programMode =
+			CLIArgumentsUtil.getProgramMode(argumentsGroup.getRepresentative());
 		
 		switch (programMode) {
 		
 		case HELP:
-			//parser.printHelp();
 			System.out.println(
 					CliFactory.createCli(CLIArguments.class).getHelpMessage()
 					+ "\n\nFor more information, see " + GlobalValues.WIKI_URI);
@@ -97,14 +186,13 @@ public class OSM2World {
 			
 		case CONVERT:
 			try {
-				Output.output(config, args);
+				Output.output(config, argumentsGroup);
 			} catch (IOException e) {
 				e.printStackTrace();
 			}
 			break;
 			
 		}
-		
 	}
 	
 }
